# iskra

./: .env_example  .gitignore  docker-compose.yml  lk.iskra.js-dev.su  nginx.conf  nginx_internal.conf
.github/workflows/: main.yml
backend/: Dockerfile  _db.sqlite3  pyproject.toml  requirements.txt
backend/api/: backend.py  constans.py  email.py  pagination.py  tasks.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/templates/email/: password_reset.html
backend/users/: admin.py  constants.py  mixins.py  models.py  premissions.py  serializers.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username.py  0002_user_educational_organization_and_more.py  0003_alter_user_professional_competencies.py  0004_alter_user_photo.py  0005_user_achievements_user_competitions_and_more.py  0005_usertestanswer.py  0006_usertestanswer.py  0007_user_role.py  0008_alter_user_professional_interests.py
nginx/: nginx.conf
